packages/bruno-app/src/styles/globals.css
@import 'tailwindcss/base';
@import 'tailwindcss/components';
@import 'tailwindcss/utilities';

:root {
  --color-brand: #546de5;
  --color-text: rgb(52 52 52);
  --color-sidebar-collection-item-active-indent-border: #d0d0d0;
  --color-sidebar-background: #f3f3f3;
  --color-request-dragbar-background: #efefef;
  --color-request-dragbar-background-active: rgb(200, 200, 200);
  --color-tab-inactive: rgb(155 155 155);
  --color-tab-active-border: #546de5;
  --color-layout-border: #dedede;
  --color-text-danger: rgb(185, 28, 28);
  --color-background-danger: #dc3545;
  --color-method-get: rgb(5, 150, 105);
  --color-method-post: #8e44ad;
  --color-method-put: #ca7811;
  --color-method-delete: rgb(185, 28, 28);
  --color-method-patch: rgb(52 52 52);
  --color-method-options: rgb(52 52 52);
  --color-method-head: rgb(52 52 52);
}

:root,.graphiql-container,.CodeMirror-info,.CodeMirror-lint-tooltip,reach-portal {
  /* Required CSS variables after upgrading GraphiQL from v1.5.9 to v2.4.7 */
  /* Colors */
  --color-primary: 0, 0%, 0% !important;
  --color-secondary: 0, 0%, 0% !important;
  --color-tertiary: 0, 0%, 0% !important;
  --color-info: 0, 0%, 0% !important;
  --color-success: 0, 0%, 0% !important;
  --color-warning: 0, 0%, 0% !important;
  --color-error: 0, 0%, 0% !important;
  --color-neutral: 0, 0%, 0% !important;
  --color-base: 0, 0%, 100% !important;

  /* Color alpha values */
  --alpha-secondary: 0.76 !important;
  --alpha-tertiary: 0.5 !important;
  --alpha-background-heavy: 0.15 !important;
  --alpha-background-medium: 0.1 !important;
  --alpha-background-light: 0.07 !important;
  
  --font-family: Consolas,Inconsolata,Droid Sans Mono,Monaco,monospace;
  --font-family-mono: 'Fira Code', monospace;
  --font-size-hint: .75rem;
  --font-size-inline-code: .8125rem;
  --font-size-body: 1rem; 
  --font-size-h4: 1.125rem;
  --font-size-h3: 1.375rem;
  --font-size-h2: 1.8125rem;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --line-height: 1.5;
  --px-2: 0px;
  --px-4: 0px;
  --px-6: 2px;
  --px-8: 8px;
  --px-10: 10px;
  --px-12: 12px;
  --px-16: 16px;
  --px-20: 20px;
  --px-24: 24px;
  --border-radius-2: 0px !important;
  --border-radius-4: 0px !important;
  --border-radius-8: 0px !important;
  --border-radius-12: 0px !important;
  --popover-box-shadow: 0px 0px 1px #000 !important;
  --popover-border: none;
  --sidebar-width: 60px;
  --toolbar-width: 40px;
  --session-header-height: 51px
}

/* Required CSS variables after upgrading GraphiQL from v1.5.9 to v2.4.7 */
.graphiql-container, .CodeMirror-info, .CodeMirror-lint-tooltip, reach-portal {
  /* General Colors */
  --color-primary: 0, 0%, 0% !important;
  --color-secondary: 0, 0%, 0% !important;
  --color-tertiary: 0, 0%, 0% !important;
  --color-info: 0, 0%, 0% !important;
  --color-success: 0, 0%, 0% !important;
  --color-warning: 0, 0%, 0% !important;
  --color-error: 0, 0%, 0% !important;
  --color-base: 0, 0%, 100% !important;
  --color-neutral: 0, 0%, 60% !important;
  
  /* Color alpha values */
  --alpha-secondary: 0.76 !important;
  --alpha-tertiary: 0.5 !important;
  --alpha-background-heavy: 0.15 !important;
  --alpha-background-medium: 0.1 !important;
  --alpha-background-light: 0.07 !important;
  
  --font-family: Consolas,Inconsolata,Droid Sans Mono,Monaco,monospace;
  --font-family-mono: 'Fira Code', monospace;
  --font-size-hint: .75rem;
  --font-size-inline-code: .8125rem;
  --font-size-body: 1rem; 
  --font-size-h4: 1.125rem;
  --font-size-h3: 1.375rem;
  --font-size-h2: 1.8125rem;
  --font-weight-regular: 400;
  --font-weight-medium: 500;
  --line-height: 1.5;
  --px-2: 2px !important;
  --px-4: 4px !important;
  --px-6: 6px !important;
  --px-8: 8px !important;
  --px-10: 10px !important;
  --px-12: 12px !important;
  --px-16: 16px !important;
  --px-20: 20px !important;
  --px-24: 24px !important;
  --border-radius-2: 2px !important;
  --border-radius-4: 2px !important;
  --border-radius-8: 2px !important;
  --border-radius-12: 2px !important;
  --popover-box-shadow: 0px 0px 1px #000 !important;
  --popover-border: none;
  --sidebar-width: 60px;
  --toolbar-width: 40px;
  --session-header-height: 51px
}

.CodeMirror-dialog {
  --px-4: 0px !important;
  --px-12: 2px !important;
}

.CodeMirror-hints {
  z-index: 20 !important;
}

.graphiql-container {
  background: transparent !important;
}

html,
body {
  margin: 0;
  padding: 0;
  font-size: 1rem;
  color: rgb(52 52 52);

  font-kerning: none;
  text-rendering: optimizeSpeed;
  letter-spacing: normal;
  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
  overflow-x: hidden;
}

body::-webkit-scrollbar,
.CodeMirror-vscrollbar::-webkit-scrollbar {
  width: 0.6rem;
}

body::-webkit-scrollbar-track,
.CodeMirror-vscrollbar::-webkit-scrollbar-track {
  background-color: #f1f1f1;
}

body::-webkit-scrollbar-thumb,
.CodeMirror-vscrollbar::-webkit-scrollbar-thumb {
  background-color: #cdcdcd;
  border-radius: 5rem;
}

/*
 * Mac-specific scrollbar styling
 * This ensures that scrollbars are only visible when the user starts to scroll,
 * providing a cleaner and more minimalistic appearance.
 */
body.os-mac * {
  scrollbar-width: thin;
}

/*
 * todo: this will be supported in the future to be changed via applying a theme
 * making all the checkboxes and radios bigger
 * input[type='checkbox'],
 * input[type='radio'] {
 * transform: scale(1.1);
 * }
 */

 .react-tooltip {
  z-index: 10000 !important;
  position: fixed !important;
}

